# Self-contained Bazel module for the gust Renode test (does NOT touch gale's
# root MODULE.bazel / verification tracks). Runs the DISSOLVED gust kernel on a
# hermetic Renode Cortex-M3 + 8 KB SRAM via pulseengine/renode-bazel-rules.
#   bazel test //:gust-renode   (Linux; the hermetic Renode portable is linux)
module(name = "gust_renode_test", version = "0.0.0")

bazel_dep(name = "rules_python", version = "0.36.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(ignore_root_user_error = True, python_version = "3.11")
use_repo(python)

bazel_dep(name = "rules_renode", version = "0.0.0")
git_override(
    module_name = "rules_renode",
    remote = "https://github.com/pulseengine/renode-bazel-rules",
    commit = "5fc76ad535034add5be5faead26820a53f8d0d23",
)

renode = use_extension("@rules_renode//renode:extensions.bzl", "renode")
use_repo(renode, "renode_toolchains")
renode.download_portable(
    name = "renode_toolchain",
    sha256 = "73fe07a8fd0849a9f30c02bd7ce7c7dd67d11070365f41ddd6145a477ebdea65",
    url = "https://builds.renode.io/renode-1.15.3+20250128git85f0aac72.linux-portable-dotnet.tar.gz",
)
register_toolchains("@renode_toolchains//:all")
