# Standalone (not part of the gust workspace) — built ad-hoc for wasm32 + dissolve.
# gust-OS driver breadth: ADC as a verified thin-seam iodev.
[workspace]

[package]
name = "gust-adc-thin"
version = "0.1.0"
edition = "2021"
description = "gust:hal thin-seam ADC driver — STM32 ADC sample-time/sequence config + a Kani-proven single-conversion FSM (enable→start→EOC→read, read-after-EOC exactly-once, no free-run) in verified wasm, importing only the generic mmio capability"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
