# Standalone (not part of the gust workspace) — built ad-hoc for wasm32 + dissolve.
# gust-OS driver breadth: bxCAN as a verified thin-seam iodev.
[workspace]

[package]
name = "gust-can-thin"
version = "0.1.0"
edition = "2021"
description = "gust:hal thin-seam CAN driver — STM32F1 bxCAN bit-timing config + a Kani-proven mode FSM (Sleep/Init/Normal, config-only-in-init, TX-only-when-empty, RX-release-only-when-pending) in verified wasm, importing only the generic mmio capability"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
